update documentation with new name
Signed-off-by: Jade Abraham <jade.abraham@hpe.com>

--- a/doc/rst/developer/hdfs_and_chapel/API.tex
+++ b/doc/rst/developer/hdfs_and_chapel/API.tex
@@ -260,7 +260,7 @@ fs.hdfsOpen(filename: string,
                 flags: ioMode): hdfsChapelFile;
 \end{lstlisting}
 Opens a file with path {\tt pathname} and in mode {\tt flags} on each locale from the file system
-that was connected to via {\tt hdfsConnect}. The only possible iomodes are
+that was connected to via {\tt hdfsConnect}. The only possible ioModes are
 {\tt ioMode.r} and {\tt ioMode.cw} (due to HDFS constraints).
 
 \begin{lstlisting}
